re PR fortran/27553 ([4.1 only] Testsuite ICE with -Wunused-labels)

PR fortran/27553
	* parse.c (next_free): Return instead of calling decode_statement
	upon error.
	* gfortran.dg/label_5.f90: New test.

From-SVN: r113712